--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,19 @@ project(DerpEngine VERSION 0.1.0 DESCRIPTION "DerpEngine interfaces with opengl 
 
 # file(GLOB_RECURSE DERP_ENGINE_SOURCES src/*.cpp)
 
+file(GLOB DERP_ENGINE_SOURCES
+     "include/*.h"
+     "src/*.cpp"
+)
+
 add_library(${PROJECT_NAME} SHARED  
     # ${DERP_ENGINE_SOURCES}
     src/application.cpp
+    src/ecs/ComponentManager.cpp
+    src/ecs/EntityManager.cpp
+    src/ecs/SystemManager.cpp
+    src/ecs/Components.cpp
+    src/ecs/systems/System.cpp
 )
 
 set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER include/derpEngine.h)
@@ -15,6 +25,7 @@ target_include_directories(${PROJECT_NAME}
     PUBLIC include
     PUBLIC ${CMAKE_SOURCE_DIR}/ext/glfw/include
     PUBLIC ${CMAKE_SOURCE_DIR}/ext/glew/include
+    PUBLIC ${CMAKE_SOURCE_DIR}/ext/glm
 )
 target_include_directories(${PROJECT_NAME}
     PRIVATE src
